[package]
name = "ipns-utils"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "ipns-entry"]

[workspace.package]
version = "0.1.0"
authors = ["douganderson444 <douganderson444@gmail.com>"]
description = "Libraries for working with IPNS in Rust"
documentation = "https://docs.rs/ipns-utils"

# Dependencies inherited from the workspace
[workspace.dependencies]
ipns-entry = { path = "ipns-entry" }

# So the sub-crates can be re-exported under ipns-utils
[dependencies]
ipns-entry = { workspace = true }

[dev-dependencies]
humantime = "2.1.0"
ipns-entry = { workspace = true } # So it's available in ./examples/
