[package]
name = "ipns-utils"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "ipns-entry",
    "ipns-interop-test",
    "ipns-server",
    "ipns-plugin-bindings",
    "ipns-plugin-interface",
]

[workspace.package]
version = "0.1.0"
authors = ["douganderson444 <douganderson444@gmail.com>"]
description = "Libraries for working with IPNS in Rust"
documentation = "https://docs.rs/ipns-utils"

# Dependencies inherited from the workspace
[workspace.dependencies]
ipns-entry = { path = "ipns-entry" }
ipns-server = { path = "ipns-server" }

[workspace.dependencies.libp2p-identity]
# version = "0.1.2"
git = "https://github.com/libp2p/rust-libp2p.git"
features = [
    "ed25519",
    "peerid",
] # possibly "peerid" for multihash, multiaddr, bs58, rand

# So the sub-crates can be re-exported under ipns-utils
[dependencies]
ipns-entry = { workspace = true }
ipns-server = { workspace = true }

[dev-dependencies]
humantime = "2.1.0"
ipns-entry = { workspace = true } # So it's available in ./examples/

[patch.crates-io]
libp2p = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "master-plus-webrtc-code" }

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Enable Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
