[package]
name = "ipns-interop-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"

[dev-dependencies]
extism = "0.4.0"
anyhow = "1.0.69"
ipns-plugin-interface = { version = "0.1.0", path = "../ipns-plugin-interface" }
serde_json = "1.0"
